(feat) Multiple resources copy
and template extending

--- a/start-site/src/main/resources/configuration/application.properties
+++ b/start-site/src/main/resources/configuration/application.properties
@@ -3,5 +3,10 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=password
 server.ssl.keyStoreType=PKCS12
 
-oauth2RedirectUrl=https://localhost:44334/oauth2-redirect.html
+cors.origins=https://localhost:44334,http://localhost:4200
+
+swagger.api.name=This is Java API Starter Kit server documentation
+swagger.api.description=Java API Starter Kit
+
+oauth2.redirect.url=https://localhost:44334/oauth2-redirect.html
 oauth2.login.entry.point=https://www-dev.realpage.com/login/identity/connect/authorize
